--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Ultracoder LSPDFR{% endblock %}</title>
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('appCss') }}
+    {% endblock %}
+</head>
+<body>
+{{ include('_elements/_navbar.html.twig') }}
+<main class="container pt-4">
+
+    {{ include('_elements/_flash.html.twig') }}
+
+    {% block body %}{% endblock %}
+</main>
+{% block javascripts %}
+    {{ encore_entry_script_tags('appJs') }}
+{% endblock %}
+</body>
 </html>
