--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -1,20 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MainController!{% endblock %}
+{% block title %}{{ parent() }} - Accueil{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/01-DORIAN/Programmation/Web/lspdfrgen/src/Controller/MainController.php'|file_link(0) }}">src/Controller/MainController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/01-DORIAN/Programmation/Web/lspdfrgen/templates/main/index.html.twig'|file_link(0) }}">templates/main/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <section class="row">
+        <article class="col-6">
+            <h1>Présentation</h1>
+            <hr>
+            <p>Bienvenue sur Dorian LSPDFR ! </p>
+            <p>
+                Ce site web permets la mise à disposition de différentes ressources pour le plugin LSPDFR (fonctionnant
+                sous GTA5). Vous y trouverez soit des plugins Open sources en cours de développement, ou bien des
+                helpers de configuration.
+            </p>
+            <p class="font-weight-bold">
+                La plateforme est en construction, et les projets tous open sources. Si vous êtes tenté par l'aventure,
+                <span class="text-danger">N'hésitez pas</span> !
+            </p>
+        </article>
+        <div class="col-6">
+            <img class="w-100" src="{{ asset('build/images/police_presentation.jpg') }}" alt="Police présentation">
+        </div>
+    </section>
 {% endblock %}
